--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ Flask-SQLAlchemy==3.1.1
 # DRIVER
 mysqlclient==2.2.7
 
+# MIGRAR
+Flask-Migrate==4.1.0
+
 # TESTS
 pytest==8.4.1
 pytest-flask==1.3.0
