--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "gulp styles"
   },
   "devDependencies": {
+    "del": "^8.0.0",
     "gulp": "^5.0.1",
-    "gulp-sass": "^6.0.1",
-    "sass": "^1.91.0",
     "gulp-clean-css": "^4.3.0",
-    "gulp-rename": "^2.1.0"
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.1.0",
+    "gulp-sass": "^6.0.1",
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.91.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.8"
   }
 }
